style(junior): avoid scroll & overflow in challenge content display

--- a/junior/app/styles/components/challenge/challenge-content.scss
+++ b/junior/app/styles/components/challenge/challenge-content.scss
@@ -16,7 +16,7 @@
     grid-template-areas:
     "left right"
     "left actions";
-    grid-template-rows: 0fr 1fr;
+    grid-template-rows: min-content min-content;
     grid-template-columns: 1fr 1fr;
 
     &--40-60 {
